# git-massage

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  SPEC.md  main.py  pyproject.toml
src/git_massage/: ai.py  config.py  git.py  main.py  utils.py
tests/: test_smoke.py
